Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53715

Device discovery aborted due to unexpected adapter changes

    XMLWordPrintable

Details

    Description

      The user is getting from time to time the error message mentioned in the title. This seems to happen because of Qt does not handle properly sent by the bluez5. Also this can be seen from the source-code of the Qt SDK (Error::InputOutputError.):

       // FIXME: add bluez error handling 
      

      Connected devices are staying connected to the master device, but discovery is turned off (the interrupt was sent, you can see it from the Qt SDK source code). This error (see the title of the report for the error message) can occur even if no device is connected, which seems to be quite wrong.

      So, the expected behaviour here is:

      The user can either get a proper error message or can keep on device discovery

      What actually happens:

      Found devices are still connected, but the discovery is off. The only error message sent to the user is quite generic and does not describe what did happen and why.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            dmnikola Dmitry Nikolaev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes